--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 		<div data-role="content" >
 			<img src="images/CTAImage.png" alt="Logo" height="200" width="290" />
 			<p><a href="#recordbooks" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right" data-ajax="false">Add a Book Now</a></p>
-			
-	
+			<p></p>
+<!--
+			<p><a href="../Bronze/index.html" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right"  value="Test" id="test" data-ajax="false">Go to Bronze Page</a></p>	
+-->
 		</div><!--Close Content-->
 		<div data-role="footer" data-position="fixed" data-id="home">
 			<div data-role="navbar">
@@ -87,6 +89,7 @@
 			</div>
 		</div>
 	</div>
+<!-- close Under Construction Page -->
 	
 <!-- Browse by Genre Page -->
 	<div data-role="page" id="by_genre">
@@ -235,6 +238,7 @@
 			</div>
 		</div>
 	</div>
+<!-- close by Genre Page -->
 	
 <!-- Browse by Author Page -->
 	<div data-role="page" id="by_author">
@@ -305,6 +309,7 @@
 			</div>
 		</div>
 	</div>
+<!-- close by Author Page -->
 	
 <!-- Browse by Title Page -->
 	<div data-role="page" id="by_title">
@@ -375,6 +380,7 @@
 			</div>
 		</div>
 	</div>
+<!-- close by Title Page -->
 	
 <!-- Search -->
 	<div data-role="page" id="search">
@@ -544,6 +550,7 @@
 			</div>
 		</div>
 	</div>
+<!-- close Search -->
 		
 <!-- RSSFeed -->
 	<div data-role="page" id="newsfeed">
@@ -571,6 +578,7 @@
 			</div>
 		</div>
 	</div>
+<!-- close RSSFeed -->
 
 <!-- RecordBooksForm -->
 	<div data-role="page" id="recordbooks">
@@ -589,7 +597,7 @@
 					<a href="#theLibrary" id="displayLink" data-inline="true" data-role="button" data-mini="true" data-icon="info" data-iconpos="right" data-theme="b" data-ajax="false">Display</a>
 				</div><!-- Close block-A-->
 				<div class="ui-block-b">
-			          <a href="#underConst" id="clearLink" data-inline="true" data-role="button" data-mini="true" data-icon="alert" data-iconpos="right" data-theme="c" data-ajax="false">Clear</a>		
+			          <a href="#" id="clearLink" data-inline="true" data-role="button" data-mini="true" data-icon="alert" data-iconpos="right" data-theme="c" data-ajax="false">Clear</a>		
 			</div><!--Close block-B-->
 			</div> <!--Close Grid-a -->
 			<form action="" method="post" id="recordbooksform" >
@@ -613,6 +621,7 @@
 					<label for="genre">Genre:</label> 
 					<select name="genre" id="genre" data-theme="a"  data-mini="true" data-native-menu="false" class="required">
 					<option data-placeholder="true">Select a Genre</option>
+						<optgroup label="Fiction">
 							<option value="child_book" >Children's Books</option>
 							<option value="horror" >Horror</option>
 							<option value="humor">Humor</option>
@@ -673,7 +682,7 @@
 	<!-- Date -->
 		<div>
 			<label for="mydate">Date</label>
-			<input name="mydate" id="mydate" type="date" data-role="datebox" value="Please click datebox ==>" data-options='{"mode": "calbox"}' class="required date">
+			<input name="mydate" id="mydate" type="date" data-role="datebox" value="Please click datebox ==>" data-options='{"mode": "calbox"}' class="required date"/>
    		</div>
 				
 	<!-- Reset and Submit buttons -->
@@ -702,7 +711,7 @@
 			</div>
 		</div>
 	</div>
-
+<!-- close RecordBooksForm -->
 	
 <!-- RecordBooksErrors -->
 	<div data-role="dialog" id="recordbookserrors" >
@@ -716,7 +725,7 @@
 			</ul>
 		</div>
 	</div>
-	
+<!-- close RecordBooksErrors -->	
 	
 <!-- Browse -->
 	<div data-role="page" id="browse">
@@ -747,7 +756,7 @@
 			</div>
 		</div>
 	</div>
-
+<!-- close Browse -->
 
 
 <!-- The Library -->
@@ -779,25 +788,25 @@
 			</ul>
 		</div>
 	</div>
-	
+<!-- close The Library -->
 
 
 
 
 	<!-- JavaScript under here -->
-	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 	<script src="http://code.jquery.com/mobile/latest/jquery.mobile.min.js"></script>
   
      <script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
-    <script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.calbox.min.js"></script>
-     <!--<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>-->
+     <script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.calbox.min.js"></script>
+     
      <script type="text/javascript" src="js/libs/RssFeed.js"></script>
 	<script type="text/javascript" src="js/libs/RssFeeder.js"></script>
-	<!--<script type="text/javascript" src="js/jqm-datebox.mode.datebox.min.js"></script>-->
+	<script type="text/javascript" src="js/libs/pubsub.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
-	<script type="text/javascript" src="js/json.js"></script>
+<!--	<script type="text/javascript" src="js/json.js"></script> -->
 <!--	<script type="text/javascript" src="js/mainJS.js"></script>-->
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/test2.js"></script>
 	
 	
 	
