--- a/index.html
+++ b/index.html
@@ -805,8 +805,8 @@
 	<script type="text/javascript" src="js/libs/pubsub.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 <!--	<script type="text/javascript" src="js/json.js"></script> -->
-<!--	<script type="text/javascript" src="js/mainJS.js"></script>-->
-	<script type="text/javascript" src="js/test2.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+<!--	<script type="text/javascript" src="js/test2.js"></script> -->
 	
 	
 	
