Trying to figure out why my JSON is not working.  Trying to figure out XML and YAML.  Have installed a YAML parser from Google.

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 <!-- close Browse -->
 
 <!-- Data Serialization -->
-	<div data-role="page" id="serialization">
+	<div data-role="page" id="serial">
 		<div data-role="header"  data-position="fixed">
 			<div>
 				<a href="#home" alt="home" data-inline="true" data-ajax="false">
@@ -812,8 +812,8 @@
 						<p>ISBN</p>
 						<p>Comments</p>
 						<p>Series</p>
-						<p>Series-Name</p>
-						<p>Series-Number</p>
+						<p>SeriesName</p>
+						<p>SeriesNum</p>
 						<p>Date</p>
 		
  			<ul id="theLibrary" data-role="listview" > 
@@ -838,6 +838,7 @@
 	<!-- JavaScript under here -->
 	<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.1.1/jquery.mobile-1.1.1.min.js"></script>
+	<script type="text/javascript" src="js/libs/yaml.js"></script>
   
      <script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
      <script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.calbox.min.js"></script>
