Had some last minute help from Wes.  Still not working but I found a few mistakes I had made.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<img src="images/CTAImage.png" alt="Logo" height="200" width="290" />
 			<p><a href="#addItem" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right" data-ajax="false">Add a Book Now</a></p>
 			<p></p>
-			<p><a href="#serialization" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right" data-ajax="false">Go to Data Serialization</a></p>
+			<p><a href="#serial" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right" data-ajax="false">Go to Data Serialization</a></p>
 <!--
 			<p><a href="../Bronze/index.html" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right"  value="Test" id="test" data-ajax="false">Go to Bronze Page</a></p>	
 -->
@@ -778,6 +778,9 @@
 				<a href="#yaml" data-role="button" id="yamlBooks" data-theme="a" data-mini="true" data-icon="arrow-r" data-iconpos="right"  data-ajax="false">YAML Data Serialization</a>
 			</div>	
 		</div>	
+		<ul id="theShelf" data-role="listview"></ul>	
+				<center><div id="datadiv"></div></center>
+
 		
 		<div data-role="footer" data-position="fixed" data-id="home">
 			<div data-role="navbar">
