Made changes in the index.html file so that it will recognize the new names for the images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	     </div><!--Close Header-->
 			
 		<div data-role="content" >
-			<img src="images/CTAImage.png" alt="Logo" height="200" width="290" />
+			<img src="images/CTA.png" alt="Logo" height="200" width="290" />
 			<p><a href="#addItem" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right" data-ajax="false">Add a Book Now</a></p>
 			<p></p>
 			<p><a href="#serial" data-role="button"  data-mini="true" data-theme="a" data-icon="arrow-r" data-iconpos="right" data-ajax="false">Go to Data Serialization</a></p>
@@ -107,39 +107,39 @@
 		<div data-role="content" >
 			<div data-role="collapsible-set" data-theme="a">
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Art & Photography.png" />
+					<img src="images/Art.png" />
 					<h4>Art & Photography</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
 					<h4>Biographies & Memoirs</h4>
-					<img src="images/Biographies & Memoirs.png" />
+					<img src="images/Bios.png" />
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Children's Books.png" />
+					<img src="images/Childrens.png" />
 					<h4>Children"s Books</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Computers & Technology.png" />
+					<img src="images/Computers.png" />
 					<h4>Computers & Technology</h4>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Cookbooks, Food & Wine.png" />
+					<img src="images/Cookbooks.png" />
 					<h4>Cookbooks, Food & Wine</h4>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Crafts, Hobbies & Home.png" />
+					<img src="images/Crafts.png" />
 					<h4>Crafts, Hobbies & Home</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Education & Reference.png" />
+					<img src="images/Education.png" />
 					<h4>Education & Reference</h4> 
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Health, Fitness & Dieting.png" />
+					<img src="images/Health.png" />
 					<h4>Health, Fitness & Dieting</h4>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
@@ -163,17 +163,17 @@
 				<p>You have no books of this genre at the moment</p>
 			</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Literature & Fiction.png" />
+					<img src="images/Literature.png" />
 					<h4>Literature & Fiction</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Manga & Graphic Novels.png" />
+					<img src="images/Manga.png" />
 					<h4>Manga & Graphic Novels</h4> 
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Math & Science.png" />
+					<img src="images/Math.png" />
 					<h4>Math & Science</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
@@ -182,17 +182,17 @@
 					<h4>Medical</h4>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Mystery, Crime, Thriller & Suspense.png" />
+					<img src="images/Mystery.png" />
 					<h4>Mystery, Crime, Thriller & Suspense</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Parenting & Relationships.png" />
+					<img src="images/Parenting.png" />
 					<h4>Parenting & Relationships</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Religion & Spirituality.png" />
+					<img src="images/Religion.png" />
 					<h4>Religion & Spirituality</h4>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
@@ -201,15 +201,15 @@
 					<p>You have no books of this genre at the moment</p>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Sci Fi & Fantasy.png" />
+					<img src="images/Fantasy.png" />
 					<h4>Sci Fi & Fantasy</h4>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Self Help.png" />
+					<img src="images/SelfHelp.png" />
 					<h4>Self Help</h4>
 				</div>
 				<div data-role="collapsible" data-collapsed="true" >
-					<img src="images/Sports & Outdoors.png" />
+					<img src="images/Sports.png" />
 					<h4>Sports & Outdoors</h4>
 					<p>You have no books of this genre at the moment</p>
 				</div>
@@ -400,17 +400,17 @@
 				<ul data-role="listview" data-inset="true" data-filter="true">
 					<li data-role="list-divider" >Non-Fiction</li>
 					<li>
-						<img src="images/Art & Photography.png" />
+						<img src="images/Art.png" />
 						<h4>Art & Photography</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Biographies & Memoirs.png" />
+						<img src="images/Bios.png" />
 						<h4>Biographies & Memoirs</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Computers & Technology.png" />
+						<img src="images/Computers.png" />
 						<h4>Computers & Technology</h4>
 						<p> Book Title: Javascript Cookbook,  Author: Shelley Powers</p>
 						<p>Book Title: JavaScript in Easy Steps,  Author: Mike McGrath</p>
@@ -418,16 +418,16 @@
 
 					</li>
 					<li>
-						<img src="images/Cookbooks, Food & Wine.png" />
+						<img src="images/Cookbooks.png" />
 						<h4>Cookbooks, Food & Wine</h4>
 					</li>
 					<li>
-						<img src="images/Crafts, Hobbies & Home.png" />
+						<img src="images/Crafts.png" />
 						<h4>Crafts, Hobbies & Home</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Education & Reference.png" />
+						<img src="images/Education.png" />
 						<h4>Education & Reference</h4>
 						<p>Book Title: Rich Dad, Poor Dad,  Author: Robert T. Kiyosaki</p>
 						<p>Book Title: Dermo,  Author: Edward Topol</p>
@@ -437,7 +437,7 @@
 
 					</li>
 					<li>
-						<img src="images/Health, Fitness & Dieting.png" />
+						<img src="images/Health.png" />
 						<h4>Health, Fitness & Dieting</h4>
 					</li>
 					<li>
@@ -451,7 +451,7 @@
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Math & Science.png" />
+						<img src="images/Math.png" />
 						<h4>Math & Science</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
@@ -460,20 +460,20 @@
 						<h4>Medical</h4>
 					</li>
 					<li>
-						<img src="images/Parenting & Relationships.png" />
+						<img src="images/Parenting.png" />
 						<h4>Parenting & Relationships</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Religion & Spirituality.png" />
+						<img src="images/Religion.png" />
 						<h4>Religion & Spirituality</h4>
 					</li>
 					<li>
-						<img src="images/Self Help.png" />
+						<img src="images/SelfHelp.png" />
 						<h4>Self Help</h4>
 					</li>
 					<li>
-						<img src="images/Sports & Outdoors.png" />
+						<img src="images/Sports.png" />
 						<h4>Sports & Outdoors</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
@@ -489,12 +489,12 @@
 					</li>
 					<li data-role="list-divider">Fiction</li>
 					<li>
-						<img src="images/Children's Books.png" />
+						<img src="images/Childrens.png" />
 						<h4>Children's Books</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Biographies & Memoirs.png" />
+						<img src="images/Bios.png" />
 						<h4>Biographies & Memoirs</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
@@ -509,17 +509,17 @@
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Literature & Fiction.png" />
+						<img src="images/Literature.png" />
 						<h4>Literature & Fiction</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Manga & Graphic Novels.png" />
+						<img src="images/Manga.png" />
 						<h4>Manga & Graphic Novels</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Mystery, Crime, Thriller & Suspense.png" />
+						<img src="images/Mystery.png" />
 						<h4>Mystery, Crime, Thriller & Suspense</h4>
 						<p>Currently there are no books listed under this genre</p>
 					</li>
@@ -529,7 +529,7 @@
 						<p>Currently there are no books listed under this genre</p>
 					</li>
 					<li>
-						<img src="images/Sci Fi & Fantasy.png" />
+						<img src="images/Fantasy.png" />
 						<h4>Sci Fi & Fantasy</h4>
 						<p>Book Title:Burned,  Author: J.F. Lewis</p>
 
