Thanks to help from Alexia, I have found my error in script where it calls in my JSON data.  While it is still not displaying, I am now able to see an object and I can see the data in that object.  Now I just need to display said object.  Code archeology continues...

--- a/index.html
+++ b/index.html
@@ -777,9 +777,11 @@
 				<a href="#xml" data-role="button" id="xmlBooks" data-theme="a" data-mini="true" data-icon="arrow-r" data-iconpos="right"  data-ajax="false">XML Data Serialization</a>
 				<a href="#yaml" data-role="button" id="yamlBooks" data-theme="a" data-mini="true" data-icon="arrow-r" data-iconpos="right"  data-ajax="false">YAML Data Serialization</a>
 			</div>	
-		</div>	
+		</div>
+		
+ 						
 		<ul id="theShelf" data-role="listview"></ul>	
-				<center><div id="datadiv"></div></center>
+		<center><div id="datadiv"></div></center>
 
 		
 		<div data-role="footer" data-position="fixed" data-id="home">
@@ -806,22 +808,20 @@
 		</div>
 		
 		<div data-role="content" >
-			<div id="contain">
+			<div id="theShelf">
 				<div class="books">
 					<h3>Format the example</h3>
-						<p>Title</p>
-						<p>Author</p>
-						<p>Genre</p>
-						<p>ISBN</p>
-						<p>Comments</p>
-						<p>Series</p>
-						<p>SeriesName</p>
-						<p>SeriesNum</p>
-						<p>Date</p>
-		
- 			<ul id="theLibrary" data-role="listview" > 
- 				<div id="contain"></div>
- 			</ul>
+					<p>Title</p>
+					<p>Author</p>
+					<p>Genre</p>
+					<p>ISBN</p>
+					<p>Comments</p>
+					<p>Series</p>
+					<p>SeriesName</p>
+					<p>SeriesNum</p>
+					<p>Date</p>
+ 				</div>
+    			</div>
     		</div>
     		
     		<div data-role="footer" data-position="fixed" data-id="home">
