made changes to my JSON

--- a/index.html
+++ b/index.html
@@ -824,6 +824,11 @@
     			</div>
     		</div>
     		
+    		<div>
+    			<ul id="theShelf" data-role="listview"></ul>	
+			<center><div id="datadiv"></div></center>
+		</div>
+    		
     		<div data-role="footer" data-position="fixed" data-id="home">
 			<div data-role="navbar">
 				<ul>
@@ -851,7 +856,7 @@
 	<script type="text/javascript" src="js/libs/pubsub.js"></script>
 	<script type="text/javascript" src="js/libs/jquery.validate.min.js"></script>
 <!--	<script type="text/javascript" src="js/json.js"></script> -->
-	<script type="text/javascript" src="js/MIUmain.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 <!--	<script type="text/javascript" src="js/test2.js"></script> -->
 	
 	
